Added tests, auth and regenerated swagger.
