# cmd/http/main.go
@@ -11,11 +11,13 @@ import (
 	"github.com/go-chi/chi"
 	"github.com/go-chi/chi/middleware"
 	"github.com/go-chi/docgen"
+	"github.com/go-chi/jwtauth"
 	"github.com/jmoiron/sqlx"
 	"github.com/joho/godotenv"
 	"github.com/sirupsen/logrus"
 	"github.com/swaggo/http-swagger"
 	"net/http"
+	"os"
 	"strings"
 	"time"
 )
@@ -74,6 +76,10 @@ func main() {
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+
 // @host project-b.ogkevin.nl
 // @BasePath /api/v1
 func createRouter(db *sqlx.DB) *chi.Mux{
@@ -96,11 +102,13 @@ func createRouter(db *sqlx.DB) *chi.Mux{
 }
 
 func apiRouter(db *sqlx.DB) chi.Router {
+	ja := jwtauth.New("HS256", []byte(os.Getenv("JWT_SECRET")), nil)
+
 	r := chi.NewRouter()
 	r.Get("/", func(w http.ResponseWriter, r *http.Request) {
 		http.Redirect(w, r, "/swagger/doc.json", http.StatusPermanentRedirect)
 	})
-	r.Mount("/user", user.BuildRouter(user.NewUsersDatabase(db)))
+	r.Mount("/user", user.BuildRouter(user.NewUsersDatabase(db), ja))
 	return r
 }
 
